--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
+<!-- 
     <header class="header">
         <div class="container header-container">
             <nav class="nav">
@@ -36,15 +36,15 @@
         </div>
 
     </header>
-    
+    -->
 
     <main>
-        <section class="hero">
+        <!-- <section class="hero">
             <div class="container">
                 <h1 class="hero-heading">Effective Solutions for Your Business</h1>
                 <button class="hero-button" type="button">Order Service</button>
             </div>
-        </section>
+        </section> -->
 
         <!-- 4 points for improvement -->
         <section class="improv box">
@@ -101,7 +101,7 @@
 
         <!-- Our Team -->
         <section class="team box">
-            <div class="container">
+            <div class="container cover">
                 <h2 class="team-heading">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-item">
@@ -380,7 +380,7 @@
                     </form>
             </div>
         </div>
-    </footer>
+    </footer> 
     <div class="backdrop is-open">
         <div class="modal">
             <button class="modal-btn-x" type="button"><svg class="modal-x-svg" width="8" height="8">
