--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<!-- 
+
     <header class="header">
         <div class="container header-container">
             <nav class="nav">
@@ -33,18 +33,76 @@
                     <li class="contact-item"><a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
+            <button class="btn-menu-open" type="button">
+                <svg class="btn-menu-open-svg" width="18" height="16">
+                    <use href="./images/icons.svg#icon-open"></use>
+                </svg>
+            </button>
+        </div>
+
+        <div class="mob-menu is-open">
+            <button class="btn-menu-close" type="button">
+                <svg class="btn-menu-close-svg" width="8"
+                height="8">
+                    <use href="./images/icons.svg#icon-close-black"></use>
+                </svg>
+            </button>
+            <nav class="mob-nav">
+                <ul class="mob-nav-list">
+                    <li class="mob-nav-item"><a class="mob-nav-link current" href="./index.html">Studio</a></li>
+                    <li class="mob-nav-item"><a class="mob-nav-link" href="">Portfolio</a></li>
+                    <li class="mob-nav-item"><a class="mob-nav-link" href="">Contacts</a></li>
+                </ul>
+            </nav>
+
+            <address class="mob-contact">
+                <ul class="mob-contact-list">
+                    <li class="mob-contact-item"><a class="mob-contact-link tel" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                    <li class="mob-contact-item"><a class="mob-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                </ul>
+            </address>
+
+                <ul class="mob-socials-list">
+                    <li class="mob-socials-item">
+                        <a class="mob-socials-link" href="">
+                            <svg class="mob-socials-svg" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mob-socials-item">
+                        <a class="mob-socials-link" href="">
+                            <svg class="mob-socials-svg" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mob-socials-item">
+                        <a class="mob-socials-link" href="">
+                            <svg class="mob-socials-svg" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mob-socials-item">   
+                        <a class="mob-socials-link" href="">
+                            <svg class="mob-socials-svg" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
         </div>
 
     </header>
-    -->
 
     <main>
-        <!-- <section class="hero">
+        <section class="hero">
             <div class="container">
                 <h1 class="hero-heading">Effective Solutions for Your Business</h1>
                 <button class="hero-button" type="button">Order Service</button>
             </div>
-        </section> -->
+        </section>
 
         <!-- 4 points for improvement -->
         <section class="improv box">
@@ -105,7 +163,7 @@
                 <h2 class="team-heading">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-item">
-                        <img class="team-image" src="./images/img-3.jpg" alt="Makr Guerrero" width="264" height="260">
+                        <img class="team-image" srcset="./images/img-3.jpg 1x, ./images/img-3-2x.jpg 2x" src="./images/img-3.jpg" alt="Makr Guerrero" width="264" height="260">
                         <div class="team-card-content">
                             <h3 class="team-item-heading">Mark Guerrero</h3>
                             <p class="team-desc">Product Designer</p>
@@ -142,7 +200,7 @@
                         </div>
                     </li>
                     <li class="team-item">
-                        <img class="team-image" src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260">
+                        <img class="team-image" srcset="./images/img-2.jpg 1x, ./images/img-2-2x.jpg 2x" src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260">
                         <div class="team-card-content">
                             <h3 class="team-item-heading">Tom Ford</h3>
                             <p class="team-desc">Frontend Developer</p>
@@ -179,7 +237,7 @@
                         </div>
                     </li>
                     <li class="team-item">
-                        <img class="team-image" src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260">
+                        <img class="team-image" srcset="./images/img-1.jpg 1x, ./images/img-1-2x.jpg 2x" src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260">
                         <div class="team-card-content">
                             <h3 class="team-item-heading">Camila Garcia</h3>
                             <p class="team-desc">Marketing</p>
@@ -216,7 +274,7 @@
                         </div>
                     </li>
                     <li class="team-item">
-                        <img class="team-image" src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260">
+                        <img class="team-image" srcset="./images/img.jpg 1x, ./images/img-2x.jpg 2x" src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260">
                         <div class="team-card-content">
                                 <h3 class="team-item-heading">Daniel Wilson</h3>
                                 <p class="team-desc">UI Designer</p>
@@ -381,7 +439,7 @@
             </div>
         </div>
     </footer> 
-    <div class="backdrop is-open">
+    <div class="backdrop">
         <div class="modal">
             <button class="modal-btn-x" type="button"><svg class="modal-x-svg" width="8" height="8">
                 <use href="./images/icons.svg#icon-close-black"></use>
