--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </button>
         </div>
 
-        <div class="mob-menu is-open">
+        <div class="mob-menu">
             <button class="btn-menu-close" type="button">
                 <svg class="btn-menu-close-svg" width="8"
                 height="8">
@@ -321,7 +321,18 @@
                 <ul class="portgolio-list">
                     <li class="portfolio-item">
                         <div class="portfolio-cover">
-                            <img class="portfolio-image" src="./images/portfolio-img-1.jpg" alt="Banking App" width="360" height="300">
+                            <picture>
+                                <source srcset="./images/portfolio-img-1.jpg 1x, 
+                                ./images/portfolio-img-1-2x.jpg 2x"
+                                media="(min-width: 1158px)">
+                                <source srcset="./images/portfolio-img-tablet-1.jpg 1x, 
+                                ./images/portfolio-img-tablet-1-2x.jpg 2x"
+                                media="(min-width: 768px)">
+                                <source srcset="./images/portfolio-img-mob-1.jpg 1x, 
+                                ./images/portfolio-img-mob-1-2x.jpg 2x"
+                                media="(max-width: 767px)">
+                                <img class="portfolio-image" src="./images/portfolio-img-mob-1.jpg" alt="Banking App">
+                            </picture>
                             <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-card-content">
@@ -331,7 +342,18 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-cover">
-                            <img class="portfolio-image" src="./images/portfolio-img-2.jpg" alt="Cashless Payment" width="360" height="300">
+                            <picture>
+                                <source srcset="./images/portfolio-img-2.jpg 1x, 
+                                ./images/portfolio-img-2-2x.jpg 2x"
+                                media="(min-width: 1158px)">
+                                <source srcset="./images/portfolio-img-tablet-2.jpg 1x, 
+                                ./images/portfolio-img-tablet-2-2x.jpg 2x"
+                                media="(min-width: 768px)">
+                                <source srcset="./images/portfolio-img-mob-2.jpg 1x, 
+                                ./images/portfolio-img-mob-2-2x.jpg 2x"
+                                media="(max-width: 767px)">
+                                <img class="portfolio-image" src="./images/portfolio-img-mob-2.jpg" alt="Cashless Payment">
+                            </picture>
                             <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-card-content">
@@ -341,7 +363,18 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-cover">
-                            <img class="portfolio-image" src="./images/portfolio-img-3.jpg" alt="Laptop and phone" width="360" height="300">
+                            <picture>
+                                <source srcset="./images/portfolio-img-3.jpg 1x, 
+                                ./images/portfolio-img-3-2x.jpg 2x"
+                                media="(min-width: 1158px)">
+                                <source srcset="./images/portfolio-img-tablet-3.jpg 1x, 
+                                ./images/portfolio-img-tablet-3-2x.jpg 2x"
+                                media="(min-width: 768px)">
+                                <source srcset="./images/portfolio-img-mob-3.jpg 1x, 
+                                ./images/portfolio-img-mob-3-2x.jpg 2x"
+                                media="(max-width: 767px)">
+                                <img class="portfolio-image" src="./images/portfolio-img-mob-3.jpg" alt="Laptop and phone">
+                            </picture>
                             <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-card-content">
@@ -351,7 +384,18 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-cover">
-                            <img class="portfolio-image" src="./images/portfolio-img-4.jpg" alt="Taxi Service" width="360" height="300">
+                            <picture>
+                                <source srcset="./images/portfolio-img-4.jpg 1x, 
+                                ./images/portfolio-img-4-2x.jpg 2x"
+                                media="(min-width: 1158px)">
+                                <source srcset="./images/portfolio-img-tablet-4.jpg 1x, 
+                                ./images/portfolio-img-tablet-4-2x.jpg 2x"
+                                media="(min-width: 768px)">
+                                <source srcset="./images/portfolio-img-mob-4.jpg 1x, 
+                                ./images/portfolio-img-mob-4-2x.jpg 2x"
+                                media="(max-width: 767px)">
+                                <img class="portfolio-image" src="./images/portfolio-img-mob-4.jpg" alt="Taxi Service">
+                            </picture>
                             <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-card-content">
@@ -361,7 +405,18 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-cover">
-                            <img class="portfolio-image" src="./images/portfolio-img-5.jpg" alt="Screen Illustrations" width="360" height="300">
+                            <picture>
+                                <source srcset="./images/portfolio-img-5.jpg 1x, 
+                                ./images/portfolio-img-5-2x.jpg 2x"
+                                media="(min-width: 1158px)">
+                                <source srcset="./images/portfolio-img-tablet-5.jpg 1x, 
+                                ./images/portfolio-img-tablet-5-2x.jpg 2x"
+                                media="(min-width: 768px)">
+                                <source srcset="./images/portfolio-img-mob-5.jpg 1x, 
+                                ./images/portfolio-img-mob-5-2x.jpg 2x"
+                                media="(max-width: 767px)">
+                                <img class="portfolio-image" src="./images/portfolio-img-mob-5.jpg" alt="Screen Illustrations">
+                            </picture>
                             <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-card-content">
@@ -371,7 +426,18 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-cover">
-                            <img class="portfolio-image" src="./images/portfolio-img-6.jpg" alt="girl smiles and looks at the phone" width="360" height="300">
+                            <picture>
+                                <source srcset="./images/portfolio-img-6.jpg 1x, 
+                                ./images/portfolio-img-6-2x.jpg 2x"
+                                media="(min-width: 1158px)">
+                                <source srcset="./images/portfolio-img-tablet-6.jpg 1x, 
+                                ./images/portfolio-img-tablet-6-2x.jpg 2x"
+                                media="(min-width: 768px)">
+                                <source srcset="./images/portfolio-img-mob-6.jpg 1x, 
+                                ./images/portfolio-img-mob-6-2x.jpg 2x"
+                                media="(max-width: 767px)">
+                                <img class="portfolio-image" src="./images/portfolio-img-mob-6.jpg" alt="girl smiles and looks at the phone">
+                            </picture>
                             <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-card-content">
@@ -439,11 +505,13 @@
             </div>
         </div>
     </footer> 
-    <div class="backdrop">
+    <div class="backdrop is-open">
         <div class="modal">
-            <button class="modal-btn-x" type="button"><svg class="modal-x-svg" width="8" height="8">
-                <use href="./images/icons.svg#icon-close-black"></use>
-            </svg></button>
+            <button class="modal-btn-x" type="button">
+                <svg class="modal-x-svg" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-black"></use>
+                </svg>
+            </button>
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form">
                 <div class="modal-wrap-label">
@@ -484,7 +552,9 @@
                             <svg class="modal-check-svg" width="10" height="8">
                                 <use href="./images/icons.svg#icon-true"></use>
                             </svg>
-                        </span>I accept the terms and conditions of the <a class="policy-link" href="">Privacy Policy</a></label>
+                        </span>
+                        <span>I accept the terms and conditions of the <a class="policy-link" href="">Privacy Policy</a></span>
+                    </label>
                 </div>
                 <button class="modal-btn-send" type="submit">Send</button>
             </form>
