--- a/index.html
+++ b/index.html
@@ -452,60 +452,61 @@
 
     <footer class="footer">
         <div class="container footer-container">
-            <div class="footer-text">
-                <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-                <p class="footer-content">
-                    Increase the flow of customers and sales for your business with digital marketing &#38; growth solutions.
-                </p>
-            </div>
-            <div class="footer-socials">
-                <p class="footer-socials-heading">Social media</p>
-                <ul class="footer-socials-list">
-                    <li class="footer-socials-item">
-                        <a class="footer-socials-link" href="">
-                            <svg class="footer-socials-svg" width="24" height="24">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-socials-item">
-                        <a class="footer-socials-link" href="">
-                            <svg class="footer-socials-svg" width="24" height="24">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-socials-item">
-                        <a class="footer-socials-link" href="">
-                            <svg class="footer-socials-svg" width="24" height="24">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-socials-item">
-                        <a class="footer-socials-link" href="">
-                            <svg class="footer-socials-svg" width="24" height="24">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-subscribe">
-                <p class="footer-subscribe-text">Subscribe</p>
-                    <form class="footer-form">
-                        <label class="footer-label">
-                        <input class="footer-email" type="email" name="footer-email" placeholder="E-mail"></label>
-                        <button class="footer-btn" type="submit">Subscribe
-                            <svg class="footer-btn-svg" width="24" height="24">
-                                <use href="./images/icons.svg#icon-airplane"></use>
-                            </svg>
-                        </button>
-                    </form>
+                <div class="footer-text">
+                    <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+                    <p class="footer-content">
+                        Increase the flow of customers and sales for your business with digital marketing &#38; growth solutions.
+                    </p>
+                </div>
+                <div class="footer-socials">
+                    <p class="footer-socials-heading">Social media</p>
+                    <ul class="footer-socials-list">
+                        <li class="footer-socials-item">
+                            <a class="footer-socials-link" href="">
+                                <svg class="footer-socials-svg" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-socials-item">
+                            <a class="footer-socials-link" href="">
+                                <svg class="footer-socials-svg" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-socials-item">
+                            <a class="footer-socials-link" href="">
+                                <svg class="footer-socials-svg" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-socials-item">
+                            <a class="footer-socials-link" href="">
+                                <svg class="footer-socials-svg" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-subscribe">
+                    <p class="footer-subscribe-text">Subscribe</p>
+                        <form class="footer-form">
+                            <label class="footer-label">
+                            <input class="footer-email" type="email" name="footer-email" placeholder="E-mail"></label>
+                            <button class="footer-btn" type="submit">Subscribe
+                                <svg class="footer-btn-svg" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-airplane"></use>
+                                </svg>
+                            </button>
+                        </form>
+
             </div>
         </div>
     </footer> 
-    <div class="backdrop is-open">
+    <div class="backdrop">
         <div class="modal">
             <button class="modal-btn-x" type="button">
                 <svg class="modal-x-svg" width="8" height="8">
